--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,8 +28,10 @@ jobs:
       - name: Run a one-line script
         run: |
           echo Hello, world!
-          echo $GITHUB_REF
-
+          echo "GITHUB_REF : ${GITHUB_REF}"
+          echo "GITHUB_HEAD_REF : ${GITHUB_HEAD_REF}"
+          
+        
       - name: Inject slug/short variables
         uses: rlespinasse/github-slug-action@feat/71/github-branch-name
 
